--- a/notebooks/makemore-micrograd.ipynb
+++ b/notebooks/makemore-micrograd.ipynb
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 396,
    "id": "a6cda403-c76d-4749-8da7-49b44669eb35",
    "metadata": {},
    "outputs": [],
@@ -1405,17 +1405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 397,
    "id": "986937da-4fad-404c-b496-f811d9f2a1f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Value(data=-0.6560023958386633)"
+       "Value(data=0.22046267240038017)"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 398,
    "id": "d17935d5-0dc8-4f7d-b6cd-7a7bd3ac73bc",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 598,
    "id": "b0aaeff4-e1e8-45f9-a483-9b5617e8f2af",
    "metadata": {},
    "outputs": [
@@ -1452,59 +1452,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 8.0\n",
-      "1 8.0\n",
-      "2 8.0\n",
-      "3 8.0\n",
-      "4 8.0\n",
-      "5 8.0\n",
-      "6 8.0\n",
-      "7 8.0\n",
-      "8 8.0\n",
-      "9 8.0\n",
-      "10 8.0\n",
-      "11 8.0\n",
-      "12 8.0\n",
-      "13 8.0\n",
-      "14 8.0\n",
-      "15 8.0\n",
-      "16 8.0\n",
-      "17 8.0\n",
-      "18 8.0\n",
-      "19 8.0\n"
+      "0 0.4085760526661496\n",
+      "1 0.4085760526661496\n",
+      "2 0.4088184858610733\n",
+      "3 0.4088184858610733\n",
+      "4 0.4089633961188122\n"
      ]
     }
    ],
    "source": [
-    "for k in range(20):\n",
+    "for k in range(5):\n",
     "  \n",
     "  # forward pass\n",
     "  ypred = [n(x) for x in xs]\n",
     "  loss = sum((yout - ygt)**2 for ygt, yout in zip(ys, ypred))\n",
     "  \n",
-    "  # backward pass  \n",
+    "  # backward pass\n",
+    "  for p in n.parameters():\n",
+    "    p.grad = 0.0\n",
     "  loss.backward()\n",
     "  \n",
     "  # update\n",
     "  for p in n.parameters():\n",
-    "    p.data += 0.1 * p.grad\n",
+    "    p.data += 0.001 * p.grad\n",
+    "\n",
     "  \n",
     "  print(k, loss.data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 599,
    "id": "aa53b2f1-733c-4c78-8bb2-b9b201acc301",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Value(data=1.0), Value(data=1.0), Value(data=1.0), Value(data=1.0)]"
+       "[Value(data=0.7253831672848142),\n",
+       " Value(data=-0.6092067705388665),\n",
+       " Value(data=-0.675494743422684),\n",
+       " Value(data=0.725180092479966)]"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 599,
      "metadata": {},
      "output_type": "execute_result"
     }
