bigram model initialization

--- a/notebooks/makemore-micrograd.ipynb
+++ b/notebooks/makemore-micrograd.ipynb
@@ -1369,11 +1369,11 @@
     "# Define Neuron, init, call, parameters\n",
     "class Neuron:\n",
     "    def __init__(self, nin):\n",
-    "        self.w = [Value(random.uniform(-1, 1)) for _ in range(nin)]\n",
-    "        self.b = Value(random.uniform(-1, 1))\n",
+    "        self.w = [Value(random.uniform(-1, 1)) for _ in range(nin)] # initialzing weights randomly.\n",
+    "        self.b = Value(random.uniform(-1, 1)) # initializing bias randomly.\n",
     "    def __call__(self, x):\n",
-    "        act = sum((wi*xi for wi, xi in zip(self.w, x)), self.b)\n",
-    "        out = act.tanh()\n",
+    "        act = sum((wi*xi for wi, xi in zip(self.w, x)), self.b) # w1*x1 + w2 * x2 + w3 * x3 ... wn * xn + b\n",
+    "        out = act.tanh() # activation function.\n",
     "        return out \n",
     "\n",
     "    def parameters(self):\n",
