--- a/notebooks/makemore-bigram.ipynb
+++ b/notebooks/makemore-bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "eec0de06-ecfc-4976-aa23-8fefedc53613",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "78bad7b9-fe55-4747-9def-e8815ec21a1d",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "6f19104b-6315-4a61-b40e-8f3d3f6a7afb",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "['emma', 'olivia']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "9c8d0b03-49fb-426b-a78c-0c7ab58d6b90",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "32b05de3-8611-42ac-a78c-a057f3c92051",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        " (('z', 'x'), 1)]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "0cb5f5d1-287f-4779-a4e9-8bfa9f55a641",
    "metadata": {},
    "outputs": [],
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "a0d1c010-76ae-4abf-b8d8-999b1283e40c",
    "metadata": {},
    "outputs": [],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "594fc55c-c200-407d-81b3-3551b3efd68d",
    "metadata": {},
    "outputs": [
@@ -722,20 +722,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "id": "383dde70-fcd3-4130-89ce-2976ba3fe29d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating total samples 32033\n",
-      "[0, 4335, 1313, 1552, 1705, 1521, 428, 681, 906, 572, 2436, 3017, 1540, 2586, 1083, 395, 524, 89, 1664, 2043, 1287, 69, 402, 285, 144, 533, 923]\n",
-      "tensor([   0, 4410, 1306, 1542, 1690, 1531,  417,  669,  874,  591, 2422, 2963,\n",
-      "        1572, 2538, 1146,  394,  515,   92, 1639, 2055, 1308,   78,  376,  307,\n",
-      "         134,  535,  929], dtype=torch.int32)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['c']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -746,32 +745,110 @@
     "# Generate characters according to the given probability distribution.\n",
     "# Get the random number generator\n",
     "g = torch.Generator().manual_seed(2147483647)\n",
-    "indices = torch.multinomial(p, num_samples=10, replacement=True, generator=g)\n",
+    "indices = torch.multinomial(p, num_samples=1, replacement=True, generator=g)\n",
     "[itoch[i.item()] for i in indices]\n",
     "\n",
     "# How to check the samples are correct?\n",
     "# Generate the total number of samples same as the total sum of all counts and check the difference.\n",
-    "counts={} # counts map for all first characters.\n",
-    "counts['.'] = 0 # mark . value as 0.\n",
-    "print(f'Generating total samples {totalsum}')\n",
-    "indices = torch.multinomial(p, num_samples=totalsum, replacement=True, generator=g)\n",
-    "for i in indices:\n",
-    "    ch = itoch[i.item()]\n",
-    "    counts[ch] = counts.get(ch, 0) + 1\n",
+    "#counts={} # counts map for all first characters.\n",
+    "#counts['.'] = 0 # mark . value as 0.\n",
+    "#print(f'Generating total samples {totalsum}')\n",
+    "#indices = torch.multinomial(p, num_samples=totalsum, replacement=True, generator=g)\n",
+    "# counting all the character counts and saving in a map.\n",
+    "#for i in indices:\n",
+    "#    ch = itoch[i.item()]\n",
+    "#    counts[ch] = counts.get(ch, 0) + 1\n",
     "\n",
-    "samples = [counts[itoch[i]] for i in range(27)]\n",
-    "print(samples)\n",
-    "print(N[0])\n",
+    "# Generated samples mapping from characters to array, so that we can check against tensor first row\n",
+    "#samples = [counts[itoch[i]] for i in range(27)]\n",
+    "#print(samples)\n",
+    "#print(N[0])\n",
     "# you can observe the all characters counts are same in samples array and N[0] tensor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7263cec6-9d5b-4036-b292-7d8dfdd1df4e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d.\n",
+      "palama.\n",
+      "maavadukwe.\n",
+      "toonaynndah.\n",
+      "se.\n",
+      "sijelyea.\n",
+      "lyn.\n",
+      "arel.\n",
+      "gion.\n",
+      "kpere.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate strings based on the given distributions in a tensor.\n",
+    "\n",
+    "P = (N+1).float() # adding 1 so that we make zero values to non-zeros so that they might appear at some point but with low probability.\n",
+    "# this is called smoothing. If we add bigger value, the values becomes so identical such that the distribution\n",
+    "#   becomes similar to uniform distribution.\n",
+    "#print(P.shape)\n",
+    "\n",
+    "#print(P.sum(1)) # this creates 1x27 shape such that all row sums are in one in one row and 27 columns.\n",
+    "#print(P.sum(1, keepdim=True)) # this creates 27x1 shape such that all row sums are in one column and 27 rows. use this one.\n",
+    "\n",
+    "P /= P.sum(1, keepdim=True) # keep all probability distributions for each row.\n",
+    "\n",
+    "# use the Generator.\n",
+    "g = torch.Generator().manual_seed(2147483643) # try to change the seed value and see the difference between generated values.\n",
+    "\n",
+    "for i in range(10): # number sample strings to generate. This is for testing.\n",
+    "    out = []\n",
+    "    idx = 0 # initial character .\n",
+    "    while True:\n",
+    "        p = P[idx]\n",
+    "        idx = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itoch[idx])\n",
+    "        if idx == 0:\n",
+    "            break\n",
+    "    print(''.join(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "158f3696-acd4-4700-8765-c3861da197da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log likelihood: %.4f tensor(-332342.7188)\n",
+      "nll: %.4f tensor(332342.7188)\n",
+      "nll: %.4f tensor(10.3750)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# measure the Maximum likelihood.\n",
+    "n = 0\n",
+    "log_likelihood = 0\n",
+    "for word in words:\n",
+    "    chs = ['.'] + list(word) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[:1]):\n",
+    "        prob = P[chtoi[ch1], chtoi[ch2]]\n",
+    "        logprob = torch.log(prob) #log likelihood \n",
+    "        log_likelihood += logprob #add log likelihood. ideally we would prefer to have all probability multiplied, since that value so small and would be difficult to measure we use log.\n",
+    "        n += 1\n",
+    "nll = -log_likelihood\n",
+    "print(f'log likelihood: %.4f', log_likelihood)\n",
+    "print(f'nll: %.4f', nll)\n",
+    "print(f'nll: %.4f', nll/n)\n"
+   ]
   }
  ],
  "metadata": {
