--- a/notebooks/makemore-bigram.ipynb
+++ b/notebooks/makemore-bigram.ipynb
@@ -722,19 +722,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "383dde70-fcd3-4130-89ce-2976ba3fe29d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['c']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating total samples 32033\n"
+     ]
     }
    ],
    "source": [
@@ -750,14 +747,14 @@
     "\n",
     "# How to check the samples are correct?\n",
     "# Generate the total number of samples same as the total sum of all counts and check the difference.\n",
-    "#counts={} # counts map for all first characters.\n",
-    "#counts['.'] = 0 # mark . value as 0.\n",
-    "#print(f'Generating total samples {totalsum}')\n",
-    "#indices = torch.multinomial(p, num_samples=totalsum, replacement=True, generator=g)\n",
+    "counts={} # counts map for all first characters.\n",
+    "counts['.'] = 0 # mark . value as 0.\n",
+    "print(f'Generating total samples {totalsum}')\n",
+    "indices = torch.multinomial(p, num_samples=totalsum, replacement=True, generator=g)\n",
     "# counting all the character counts and saving in a map.\n",
-    "#for i in indices:\n",
-    "#    ch = itoch[i.item()]\n",
-    "#    counts[ch] = counts.get(ch, 0) + 1\n",
+    "for i in indices:\n",
+    "    ch = itoch[i.item()]\n",
+    "    counts[ch] = counts.get(ch, 0) + 1\n",
     "\n",
     "# Generated samples mapping from characters to array, so that we can check against tensor first row\n",
     "#samples = [counts[itoch[i]] for i in range(27)]\n",
@@ -847,7 +844,7 @@
     "nll = -log_likelihood\n",
     "print(f'log likelihood: %.4f', log_likelihood)\n",
     "print(f'nll: %.4f', nll)\n",
-    "print(f'nll: %.4f', nll/n)\n"
+    "print(f'nll: %.4f', nll/n)"
    ]
   }
  ],
